--- a/src/styles/components/SupervisorMeta.scss
+++ b/src/styles/components/SupervisorMeta.scss
@@ -41,7 +41,6 @@
   
   &__chart {
     display: flex;
-    margin-bottom: -15px;
 
     .card {
 
